# ChangeLog for games-action/teewars
# Copyright 2008-2008 Gentoo Foundation; Distributed under the GPL v2

  26 Sep 2008; Piotr Szymaniak <lazy_bum@o2.pl> teeworlds-0.4.3-r1.ebuild:
  Fixed depends and Manifest.

  26 Sep 2008; Piotr Szymaniak <lazy_bum@o2.pl> -teeworlds-0.4.2.ebuild,
  +teeworlds-0.4.3-r1.ebuild, +files/teeworlds-oss.patch:
  Added experimental (?) oss support. Thanks to occulkot for patch and vln for
  testing.

  02 Sep 2008; Piotr Szymaniak <lazy_bum@o2.pl> +teeworlds-0.4.3.ebuild:
  Version bump.

  31 Aug 2008; Piotr Szymaniak <lazy_bum@o2.pl> teeworlds-0.4.2.ebuild:
  Ebuild submited by Mr. Bones.

  09 Aug 2008; Piotr Szymaniak <lazy_bum@o2.pl> -teeworlds-0.4.1.ebuild,
  teeworlds-0.4.2.ebuild:
  Fixed quoting.

  15 Jun 2008; Piotr Szymaniak <lazy_bum@o2.pl> -teeworlds-9999.ebuild:
  No longer updated.

  05 Apr 2008; Piotr Szymaniak <lazy_bum@o2.pl> -teeworlds-0.4.0.ebuild,
  +teeworlds-0.4.2.ebuild:
  Version bump.

  23 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl> +teeworlds-0.4.1.ebuild:
  Version bump. minor ebuild fixes.

  23 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl> +teeworlds-0.4.0.ebuild,
  +teeworlds-9999.ebuild:
  Changed name to teeworlds, updated to latest version.
  Rekeyworded svn version to "".
  Removed previous versions with old name.

  16 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl> teewars-9999.ebuild,
  -files/teewars-different-svn-config-dir-and-cleanup.patch:
  Removed patch.

  10 Feb 2008; Piotr Szymaniak <lazy_bum@o2.pl> teewars-9999.ebuild,
  -files/teewars-different-version.patch:
  Removed, fixed in source.

*teewars-0.3.4 (09 Feb 2008)

  09 Feb 2008; Piotr Szymaniak <lazy_bum@o2.pl> +teewars-0.3.4.ebuild:
  Version bump.

  09 Feb 2008; Piotr Szymaniak <lazy_bum@o2.pl> teewars-9999.ebuild,
  +files/teewars-different-svn-config-dir-and-cleanup.patch,
  +files/teewars-different-version.patch:
  Added two patches.

  07 Feb 2008; Piotr Szymaniak <lazy_bum@o2.pl> teewars-0.3.3.ebuild:
  Removed useless exeinto.
