@@ -1,6 +1,9 @@
 AUX teeworlds-oss.patch 4182 RMD160 5db2ad68ee8aa4369c7886bc39b61133d4282c4a SHA1 88c0e07950b4ab66815839e5ec4d3544a47cb0db SHA256 705ac57a27618670498df715c667595838b22d1aa8c36aa32437b85dee492ace
+DIST bam-0.2.0.tar.gz 162342 RMD160 00af151d532bb0452d802e782f1f799abf12c4c5 SHA1 99d86db750fe18ea5b25493850122929bd2c674b SHA256 ef6cddc1df47b0d8106265033ef4e55e61decabf2279a2acd7fdf016633c0758
 DIST bam.zip 478660 RMD160 a116a8a6750bbe00c07333af12827eded2b207d9 SHA1 bf26973d4eee40c4128b738a08f79ecfa73b4ef7 SHA256 db78d80b88fd05a07fc1ab29a9bcd060c2d0c2c214c6122861ff4d6d409ae937
 DIST teeworlds-0.4.3-src.tar.gz 5056193 RMD160 e338bd437d15db6a352dfb07e98fcf314d50ec84 SHA1 31cfbd1dbf440a3de63259983b3c9bcb73ae158d SHA256 366418de9228818516edf9efbb3cb54dcd62e09e1354838ae010327e420924cc
+DIST teeworlds-0.5.0-src.tar.gz 5890654 RMD160 d66ddc52f299472ecdad64cd8094e566d8d1ebcb SHA1 e7c46673c35074bf52747dc25a17f09086281bcc SHA256 bd8011c40066168d8faa16ba52a5e7e0deb59e0371123c3c4340485110d276aa
 EBUILD teeworlds-0.4.3-r1.ebuild 2141 RMD160 71d9ea403f283ef3a59067762fbde433fd1e8f0d SHA1 29e4f017c36219a8608cf87ee3213fafc891e3b4 SHA256 99de8915b070f7d6b101b58399d8298c83ecbfb94e46421edf3a5628c1f8ae03
 EBUILD teeworlds-0.4.3.ebuild 1998 RMD160 f84f70790c4352c2684cefde2b438df9d0d3ccb1 SHA1 fe1db1bd273385062577db268b4d4244a50622fc SHA256 08afed0ce970b77b281ca26306c7461686b9687b9028659b5a3a16a875434103
-MISC ChangeLog 3434 RMD160 d4acc86f244a7bbbdb9b07e1ef68ad183ebb2104 SHA1 0dc9de659934d92b0cfdb2a409ac0dec4fee7cc5 SHA256 8a485d67bc7657a9fe2fd62332c28d48e5c86a433e8ec5ffdd3e1fe57895ff79
+EBUILD teeworlds-0.5.0.ebuild 2154 RMD160 0cca26d52c24421be67216169e625df842e4d646 SHA1 abc69b9e59fd2919edafe1c69ab6844d6f51854a SHA256 303032284ac9f881df14056b20d1503f80ab0ebe683a8202a69989d177a710d1
+MISC ChangeLog 3524 RMD160 095265a47a1409fb9d642b51bd6c48a8ef6d0f2d SHA1 36887a744256cbcb3c40fc4573c526ecae75473b SHA256 8e4c774612cbcb6c8c477a33404b52feb3670c2b6672b2442b66df56645f2404
