@@ -1,5 +1,8 @@
 # ChangeLog for games-action/teewars
-# Copyright 2008-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 2008-2009 Gentoo Foundation; Distributed under the GPL v2
+
+  16 Jan 2009; Piotr Szymaniak <lazy_bum@o2.pl> +teeworlds-0.5.0.ebuild:
+  Version bump.
 
   26 Sep 2008; Piotr Szymaniak <lazy_bum@o2.pl> teeworlds-0.4.3-r1.ebuild:
   Fixed depends and Manifest.
